--- a/HelloHelios/HelloHelios/HelloHelios.csproj
+++ b/HelloHelios/HelloHelios/HelloHelios.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Microsoft.AspNet.Loader.IIS.0.1.4-pre\build\net45\Microsoft.AspNet.Loader.IIS.props" Condition="Exists('..\packages\Microsoft.AspNet.Loader.IIS.0.1.4-pre\build\net45\Microsoft.AspNet.Loader.IIS.props')" />
+  <Import Project="..\packages\Microsoft.AspNet.Loader.IIS.0.1.5-pre\build\net45\Microsoft.AspNet.Loader.IIS.props" Condition="Exists('..\packages\Microsoft.AspNet.Loader.IIS.0.1.5-pre\build\net45\Microsoft.AspNet.Loader.IIS.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -46,8 +46,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.AspNet.Loader.IIS">
-      <HintPath>..\packages\Microsoft.AspNet.Loader.IIS.0.1.4-pre\lib\net45\Microsoft.AspNet.Loader.IIS.dll</HintPath>
+    <Reference Include="Microsoft.AspNet.Loader.IIS, Version=0.1.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.Loader.IIS.0.1.5-pre\lib\net45\Microsoft.AspNet.Loader.IIS.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin">
@@ -59,10 +60,12 @@
     <Reference Include="Microsoft.Owin.FileSystems">
       <HintPath>..\packages\Microsoft.Owin.FileSystems.2.1.0\lib\net40\Microsoft.Owin.FileSystems.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Owin.Host.IIS">
-      <HintPath>..\packages\Microsoft.Owin.Host.IIS.0.1.4-pre\lib\net45\Microsoft.Owin.Host.IIS.dll</HintPath>
+    <Reference Include="Microsoft.Owin.Host.IIS, Version=0.1.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.Owin.Host.IIS.0.1.5-pre\lib\net45\Microsoft.Owin.Host.IIS.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Owin.Hosting">
+    <Reference Include="Microsoft.Owin.Hosting, Version=2.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Owin.Hosting.2.1.0\lib\net45\Microsoft.Owin.Hosting.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Owin.StaticFiles">
